# DataTypeProbe

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bench.sh
examples/: CMakeLists.txt
examples/list/: example_list.hpp
include/: list_tests.hpp  priority_queue_tests.hpp  queue_tests.hpp  stack_tests.hpp  table_tests.hpp  tester.h  utility.hpp
include/concepts/: generic_concepts.hpp  list_concepts.hpp  priority_queue_concepts.hpp  queue_concepts.hpp  stack_concepts.hpp  table_concepts.hpp
include/list/: list_concepts.h
tests/: CMakeLists.txt  example.cpp
